<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/tvXplora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/text_company_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/text_version"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/text_password" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:layout_marginHorizontal="48dp"
        android:text="@string/btn_sign_in" />
</LinearLayout>