<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoreActivity">

    <EditText
        android:id="@+id/etNameStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etCodeStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/text_code"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameStore"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAddressStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:hint="@string/text_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodeStore"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etLatitudeStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/text_latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressStore"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etLongitudeStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="numberSigned|numberDecimal"
        android:hint="@string/text_longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLatitudeStore"
        android:importantForAutofill="no" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddStore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/btn_add_store"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLongitudeStore" />

</androidx.constraintlayout.widget.ConstraintLayout>