<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <EditText
        android:id="@+id/etNameProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/etPriceProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:hint="@string/text_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameProduct"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etWholesalePriceProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="@string/text_wholesale_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPriceProduct"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etStock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="number"
        android:hint="@string/text_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWholesalePriceProduct"
        android:importantForAutofill="no" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/btn_add_product"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStock" />

</androidx.constraintlayout.widget.ConstraintLayout>