<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    
    <ImageView
        android:id="@+id/ibProfile"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_account"
        android:contentDescription="@string/description_image_profile" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="tavidanner96@gmail.com"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        tools:text="Tavi Manrique"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/tvPos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_point_of_sell"
        android:textSize="20sp"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/text_support"
        android:textSize="20sp"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/text_log_out"
        android:textSize="20sp"
        android:textAlignment="textStart" />


</LinearLayout>