<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvReportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/title_report_activity"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="18dp">
            <TextView
                android:id="@+id/tvNameProduct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:layout_margin="1dp"
                android:paddingHorizontal="8dp"
                android:background="@color/purple_500"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/text_products" />

            <TextView
                android:id="@+id/tvPriceProduct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:layout_margin="1dp"
                android:paddingHorizontal="8dp"
                android:background="@color/purple_500"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/text_price_cost" />

            <TextView
                android:id="@+id/tvWholesalePrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:layout_margin="1dp"
                android:paddingHorizontal="8dp"
                android:background="@color/purple_500"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/text_wholesale_price" />

            <TextView
                android:id="@+id/tvStock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:layout_margin="1dp"
                android:paddingHorizontal="8dp"
                android:background="@color/purple_500"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/text_stock" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product"
            android:layout_marginHorizontal="18dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/content_description_fab"/>

</androidx.constraintlayout.widget.ConstraintLayout>